# rock-paper-scissors-haskell

./: LICENSE  README.md  rock-paper-scissors.cabal  stack.yaml
app/: Main.hs
src/: CommonTypes.hs  RockPaperScissorsMonoid.hs  RockPaperScissorsStateMonad.hs
test/: RockPaperScissorsMonoidSpec.hs  RockPaperScissorsStateMonadSpec.hs  Spec.hs
