name:                rock-paper-scissors
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rock-paper-scissors#readme
license:             BSD2
license-file:        LICENSE
author:              Sven Tennie
maintainer:          sven.tennie@dreamit.de
copyright:           2017 Sven Tennie
category:            Kata
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RockPaperScissorsMonoid
                     , RockPaperScissorsStateMonad
                     , CommonTypes
  build-depends:       base >= 4.7 && < 5
                     , random
                     , containers
                     , mtl
                     , monad-loops
  default-language:    Haskell2010

executable rock-paper-scissors-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rock-paper-scissors
                     , random
                     , mtl
  default-language:    Haskell2010

test-suite rock-paper-scissors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  exposed-modules:     RockPaperScissorsMonoidSpec
                     , RockPaperScissorsStateMonadSpec
  build-depends:       base
                     , rock-paper-scissors
                     , hspec == 2.4.3
                     , mtl
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supersven/rock-paper-scissors
